// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user guide component should not render button 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <OerebUserGuide />
</Provider>
`;

exports[`user guide component should render button 1`] = `
<Provider
  store={
    Object {
      "@@observable": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
>
  <OerebUserGuide>
    <button
      className="btn btn-outline-secondary oereb-client-user-guide"
      onClick={[Function]}
      title="menu.user_guide.title"
      type="button"
    >
      <i
        className="bi bi-question-circle"
      />
    </button>
  </OerebUserGuide>
</Provider>
`;
